# sematikys

./: .dockerignore  .gitignore  Dockerfile  README.md  baseline-train.ipynb  converter.py  docker-compose.yml  pyproject.toml  web.py
